--- a/quiz/ep-quiz.html
+++ b/quiz/ep-quiz.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ENJOY PROGRAMMING</title>
+    <link href="./assets/images/logo.png" rel="icon" />
+    <script src="./ep-quiz.js"></script>
+    <link rel="stylesheet" href="./ep-quizz.css">
+  </head>
+  <body>
+    <div class="quiz-container">
+      <main class="main-content">
+        <div class="question-display">
+          <h1 id="text-display" class="question-text loading">Loading...</h1>
+        </div>
 
-<head>
-  <title>ENJOY PROGRAMMING</title>
-  <link href="./assets/images/logo.png" rel="icon" />
-  <link rel="stylesheet" href="ep-quizz.css" />
-  <script type="module" src="ep-quiz.js"></script>
-  <script type="JavaScript" src="ep-quiz.js"></script>
-</head>
+        <div class="answers-grid">
+          <button
+            class="answer-button"
+            id="answer-one"
+            onclick="answerButtonClicked('1')"
+          >
+            Option A
+          </button>
+          <button
+            class="answer-button"
+            id="answer-two"
+            onclick="answerButtonClicked('2')"
+          >
+            Option B
+          </button>
+          <button
+            class="answer-button"
+            id="answer-three"
+            onclick="answerButtonClicked('3')"
+          >
+            Option C
+          </button>
+          <button
+            class="answer-button"
+            id="answer-four"
+            onclick="answerButtonClicked('4')"
+          >
+            Option D
+          </button>
+        </div>
+      </main>
 
-<body style="margin: 0;">
-  <!-- display -->
-  <div class="main-container" id="main-body">
-    <div class="left-container" id="left-containerr">
-      <div class="display-container" id="container">
-        <h1 id="text-display" class="text-display">Loading</h1>
-      </div>
+      <aside class="sidebar">
+        <div class="stat-card question-card">
+          <div class="stat-label">Question</div>
+          <div id="question-number" class="stat-value">1</div>
+        </div>
 
-      <!-- buttons -->
-      <div class="left-bottom__container">
-        <button class="answer-button" id="answer-one" onclick="answerButtonClicked('1')"></button>
-        <button class="answer-button" id="answer-two" onclick="answerButtonClicked('2')"></button>
-        <button class="answer-button" id="answer-three" onclick="answerButtonClicked('3')"></button>
-        <button class="answer-button" id="answer-four" onclick="answerButtonClicked('4')"></button>
-      </div>
+        <div class="stat-card">
+          <div class="stat-label">Correct</div>
+          <div id="score-one" class="stat-value">0</div>
+        </div>
+
+        <div class="stat-card">
+          <div class="stat-label">Wrong</div>
+          <div id="score-two" class="stat-value">0</div>
+        </div>
+      </aside>
     </div>
-
-    <div class="right-container">
-      <div class="score-board" id="container" style="background-color: #092635">
-        <h1 id="question-number" class="text-display">0</h1>
-      </div>
-      <div class="score-board" id="container" style="background-color: #65b741">
-        <h1 id="score-one" class="text-display">0</h1>
-      </div>
-      <div class="score-board" id="container" style="background-color: #ef4040">
-        <h1 id="score-two" class="text-display">0</h1>
-      </div>
-    </div>
-  </div>
-</body>
-
+  </body>
 </html>
