--- a/quiz/quiz-index.html
+++ b/quiz/quiz-index.html
@@ -6,174 +6,192 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-      integrity="sha512-5AZdO4K8XmtNzXZGhXYmC/Tb0mQm67X7Dh7QKXv6ej3qLJgNpZ4rCkS6oRanf5cj6eOefA1bZ2ewzaKBiV5wTw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="../helper/styleswitchers.css" />
     <style>
-      .main-div {
-        width: 100vw;
-        height: 90vh;
-        background-color: #30303000;
-        color: var(--theme-color) !important;
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        min-height: 100vh;
+      }
+
+      .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 2rem;
+        min-height: 100vh;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
       }
 
-      .html-div {
-        background-color: #7c7c7c45;
-        color: var(--theme-color) !important;
-        width: 20%;
-        height: 35%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-family: sans-serif, Tahoma, Verdana, Geneva;
-        margin: 10px;
-        transition: transform 0.3s ease;
-        cursor: pointer;
-      }
-
-      .html-div:hover {
-        background-color: #393939;
-        border: solid #2196f3;
-        transform: translateY(-5px);
-        /* Moves the button up by 5px on hover */
-      }
-
-      .icon {
-        width: 45px;
-        height: 45px;
-        margin-top: 15%;
-      }
-
-      .icon-css {
-        width: 55px;
-        height: 55px;
-        margin-top: 15%;
-      }
-
-      .top-div {
-        width: 100%;
-        height: 25%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: sans-serif, Tahoma, Verdana, Geneva;
-      }
-
-      .bottom-div {
-        width: 100%;
-        height: 65%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: sans-serif, Tahoma, Verdana, Geneva;
-      }
-
-      .logo-style {
-        width: 100px;
-        height: 100px;
-        margin: 20px;
-        border-radius: 50%;
-      }
-
-      h2 {
-        font-size: 22px;
-        color: var(--theme-color) !important;
+      .header {
         text-align: center;
-        font-family: sans-serif, Tahoma, Verdana, Geneva;
+        margin-bottom: 3rem;
+      }
+      .header img {
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        margin-bottom: 1rem;
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+      }
+      .header h1 {
+        color: var(--theme-color, #fff);
+        font-size: 2.5rem;
+        font-weight: 300;
+        letter-spacing: 2px;
+        text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+      }
+
+      .quiz-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+        gap: 2rem;
+        flex: 1;
+        align-content: center;
+      }
+
+      .quiz-card {
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(20px);
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        border-radius: 20px;
+        padding: 2.5rem 2rem;
+        text-align: center;
+        cursor: pointer;
+        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        position: relative;
+        overflow: hidden;
+      }
+
+      .quiz-card::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+          90deg,
+          transparent,
+          rgba(255, 255, 255, 0.1),
+          transparent
+        );
+        transition: left 0.5s;
+      }
+
+      .quiz-card:hover::before {
+        left: 100%;
+      }
+      .quiz-card:hover {
+        transform: translateY(-10px) scale(1.02);
+        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+        border-color: rgba(255, 255, 255, 0.4);
+      }
+
+      .quiz-icon {
+        width: 60px;
+        height: 60px;
+        margin-bottom: 1.5rem;
+        filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.3));
+      }
+      .quiz-title {
+        color: var(--theme-color, #fff);
+        font-size: 1.3rem;
+        font-weight: 500;
+        text-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+      }
+
+      @media (max-width: 768px) {
+        .container {
+          padding: 1rem;
+        }
+        .header h1 {
+          font-size: 2rem;
+        }
+        .quiz-grid {
+          grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+          gap: 1.5rem;
+        }
+        .quiz-card {
+          padding: 2rem 1.5rem;
+        }
+        .quiz-icon {
+          width: 50px;
+          height: 50px;
+        }
+        .quiz-title {
+          font-size: 1.1rem;
+        }
       }
 
       @media (max-width: 480px) {
-        .html-div {
-          width: 55%;
-          height: 15%;
+        .quiz-grid {
+          grid-template-columns: 1fr;
         }
-
-        .icon {
-          width: 35px;
-          /* Adjust icon size for mobile */
-          height: 35px;
-          margin-top: 20px;
-        }
-
-        .icon-css {
-          width: 40px;
-          /* Adjust icon size for mobile */
-          height: 40px;
-          margin-top: 20px;
-        }
-
-        h2 {
-          font-size: 12px;
-          color: var(--theme-color) !important;
+        .quiz-card {
+          padding: 1.5rem;
         }
       }
     </style>
-    <script>
-      function onHTMLclick(type) {
-        if (type == 0) {
-          window.location.href = "./quiz/ep-quiz.html?quiz=html";
-        } else if (type == 1) {
-          window.location.href = "./quiz/ep-quiz.html?quiz=css";
-        } else if (type == 2) {
-          window.location.href = "./quiz/ep-quiz.html?quiz=communication";
-        }else {
-          window.location.href = "./quiz/ep-quiz.html?quiz=js";
-        }
-      }
-      function onGITHUBCLick() {
-        window.location.href =
-          "https://github.com/EnjoyProgrammingAdmin/html-project1";
-      }
-    </script>
   </head>
+  <body>
+    <div class="container">
+      <header class="header">
+        <img
+          src="../assets/logo/resized-logo.jpeg"
+          alt="Enjoy Programming Logo"
+        />
+        <h1>ENJOY PROGRAMMING</h1>
+      </header>
 
-  <body style="margin: 0px; background-color: #1b424200">
-    <div class="main-div">
-      <div class="top-div font-family-primary" onclick="onHTMLclick()">
-        <img src="../assets/logo/resized-logo.jpeg" class="logo-style" />
-        <h2>ENJOY PROGRAMMING</h2>
-      </div>
-      <div class="bottom-div font-family-primary">
-        <div class="html-div" onclick="onHTMLclick(0)">
+      <div class="quiz-grid">
+        <div class="quiz-card" onclick="navigate('html')">
           <img
             src="../assets/images/icons/html-logo.png"
-            class="icon"
-            alt="HTML Icon"
+            class="quiz-icon"
+            alt="HTML"
           />
-          <h2 style="color: var(--theme-color);">HTML</h2>
+          <h2 class="quiz-title">HTML</h2>
         </div>
-        <div class="html-div" onclick="onHTMLclick(1)">
+
+        <div class="quiz-card" onclick="navigate('css')">
           <img
             src="../assets/images/icons/css-logo.png"
-            class="icon-css"
-            alt="CSS Icon"
+            class="quiz-icon"
+            alt="CSS"
           />
-          <h2>CSS</h2>
+          <h2 class="quiz-title">CSS</h2>
         </div>
-        <div class="html-div" onclick="onHTMLclick(3)">
+
+        <div class="quiz-card" onclick="navigate('js')">
           <img
             src="../assets/images/icons/js-logo.png"
-            class="icon"
-            alt="JavaScript Icon"
+            class="quiz-icon"
+            alt="JavaScript"
           />
-          <h2>JavaScript</h2>
+          <h2 class="quiz-title">JavaScript</h2>
         </div>
-        <div class="html-div" onclick="onHTMLclick(2)">
+
+        <div class="quiz-card" onclick="navigate('communication')">
           <img
             src="https://cdn-icons-png.freepik.com/512/9564/9564944.png"
-            class="icon"
-            alt="Communication Icon"
+            class="quiz-icon"
+            alt="Communication"
           />
-          <h2>Communication Skills</h2>
+          <h2 class="quiz-title">Communication Skills</h2>
         </div>
       </div>
     </div>
+
+    <script>
+      function navigate(type) {
+        window.location.href = `./quiz/ep-quiz.html?quiz=${type}`;
+      }
+    </script>
   </body>
 </html>
